project/manifests-gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
  namespace: project
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
        foo: bar
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-backend
          image: PROJECT_BACKEND_IMAGE
          resources:
            limits:
              memory: "128Mi"
              # 125/1000 of a core = 12.5%
              cpu: "125m"
          volumeMounts:
            - name: project-volume
              mountPath: /app/build/public
        - name: project-frontend
          image: PROJECT_FRONTEND_IMAGE
          resources:
            limits:
              memory: "128Mi"
              # 125/1000 of a core = 12.5%
              cpu: "125m"
